Upgrated some new information

--- a/app/views/layouts/application-album.html.erb
+++ b/app/views/layouts/application-album.html.erb
@@ -50,29 +50,28 @@
 	document.createElement('figcaption');
 </script>
 <![endif]-->
-  
+
 </head>
 
 <body class="album1">
   <div id="container">
-  
+
     <header id="header-main">
     	<div class="container_16">
         	<header>
             	<nav id="menu-secondary">
             		<ul>
                 		<li><a href="contacto" class="contacto"><span style="display:none">Contacto</span></a></li>
-                   	 	<li><a href="https://twitter.com/LMS_consulting" class="twitter"><span style="display:none">Twitter</span></a></li>     
-                		<li><a href="http://www.facebook.com/pages/Lms-Consulting/106404472756138" class="facebook"><span style="display:none">Facebook</span></a></li>
-                    
+                		<li><a href="https://www.facebook.com/pages/Laboral-Medical-Service-EIRL/275466269186823" class="facebook"><span style="display:none">Facebook</span></a></li>
+
                 	</ul>
     			</nav>
-				
+
             </header>
-        	
+
             <section>
                 <%= link_to(@home) do %>
-   
+
             	<%= link_to (image_tag("3-images/logo.png", :size => "330x80", :alt => "LabMedical", :id => "logo")), '/homes' %>
 		<% end %>
             	<nav id="menu-main">
@@ -109,8 +108,8 @@
                 	</ul>
     			</nav>
             </section>
-            
-            
+
+
         </div>
     </header>
 
@@ -118,7 +117,7 @@
   <%= yield %>
 
 
-  
+
 
 
   <section id="postcript-bottom">
@@ -131,10 +130,9 @@
             		<img src="/images/3-images/logo-cinemark.png" />
                     <img src="/images/3-images/logo-ripley.png" />
                 </figure>
-                
+
                 <figure>
                 	<figcaption>
-                    	Conf&iacute;an en LMS Consulting:
                     <figcaption>
             		<img src="/images/3-images/logo-poderosa.png" />
                     <img src="/images/3-images/logo-elbrocal.png" />
@@ -157,14 +155,13 @@
         		<span>Ll&aacute;manos</span>
                 <p>
                 	<a><span>2495257 / 4455059</span></a>
-					<a><span>999857980</span></a>
+					<a><span>999857980 / 413*1130</span></a>
                 </p>
             </article>
             <article class="social-buttons">
         		<span>Socializemos</span>
                 <p>
-                	<a href="http://www.facebook.com/pages/Lms-Consulting/106404472756138" class="facebook"></a>
-                    <a href="https://twitter.com/LMS_consulting" class="twitter"></a>
+                	<a href="https://www.facebook.com/pages/Laboral-Medical-Service-EIRL/275466269186823" class="facebook"></a>
                     <!--<a href="" class="rss"></a>-->
                 </p>
             </article>
@@ -191,7 +188,7 @@
 
   <!-- JavaScript at the bottom for fast page loading -->
 
-  
+
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="javascripts/libs/jquery-1.6.2.min.js"><\/script>')</script>
 
@@ -199,11 +196,11 @@
   <!-- scripts concatenated and minified via ant build script-->
   <%= javascript_include_tag 'mylibs/lightbox/jquery.lightbox.min', 'script', :cache => 'powerfactory' %>
   <!-- end scripts-->
-  
-  
-  
-   
-	
+
+
+
+
+
   <!-- mathiasbynens.be/notes/async-analytics-snippet Change UA-28243416-1 to be your site's ID -->
   <script>
     var _gaq=[['_setAccount','UA-28243416-1'],['_trackPageview'],['_trackPageLoadTime']];
