--- a/app/views/layouts/application-alt.html.erb
+++ b/app/views/layouts/application-alt.html.erb
@@ -51,29 +51,28 @@
 	document.createElement('figcaption');
 </script>
 <![endif]-->
-  
+
 </head>
 
 <body class="done2">
   <div id="container">
-  
+
     <header id="header-main">
     	<div class="container_16">
         	<header>
             	<nav id="menu-secondary">
             		<ul>
                 		<li><a href="contacto" class="contacto"><span style="display:none">Contacto</span></a></li>
-                   	 	<li><a href="https://twitter.com/LMS_consulting" class="twitter"><span style="display:none">Twitter</span></a></li>     
-                		<li><a href="http://www.facebook.com/pages/Lms-Consulting/106404472756138" class="facebook"><span style="display:none">Facebook</span></a></li>
-                    
+                		<li><a href="https://www.facebook.com/pages/Laboral-Medical-Service-EIRL/275466269186823" class="facebook"><span style="display:none">Facebook</span></a></li>
+
                 	</ul>
     			</nav>
-				
+
             </header>
-        	
+
             <section>
                 <%= link_to(@home) do %>
-   
+
             	<%= link_to (image_tag("3-images/logo.png", :size => "330x80", :alt => "LabMedical", :id => "logo")), '/homes' %>
 		<% end %>
             	<nav id="menu-main">
@@ -110,8 +109,8 @@
                 	</ul>
     			</nav>
             </section>
-            
-            
+
+
         </div>
     </header>
 
@@ -119,7 +118,7 @@
   <%= yield %>
 
 
-  
+
 
 
   <section id="postcript-bottom">
@@ -132,7 +131,7 @@
             		<img src="/images/3-images/logo-cinemark.png" />
                     <img src="/images/3-images/logo-ripley.png" />
                 </figure>
-                
+
                 <figure>
                 	<figcaption>
                     	Conf&iacute;an en LMS Consulting:
@@ -158,14 +157,13 @@
         		<span>Ll&aacute;manos</span>
                 <p>
                 	<a><span>2495257 / 4455059</span></a>
-					<a><span>999857980</span></a>
+					<a><span>999857980 / 413*1130</span></a>
                 </p>
             </article>
             <article class="social-buttons">
         		<span>Socializemos</span>
                 <p>
-                	<a href="http://www.facebook.com/pages/Lms-Consulting/106404472756138" class="facebook"></a>
-                    <a href="https://twitter.com/LMS_consulting" class="twitter"></a>
+                	<a href="https://www.facebook.com/pages/Laboral-Medical-Service-EIRL/275466269186823" class="facebook"></a>
                     <!--<a href="" class="rss"></a>-->
                 </p>
             </article>
@@ -200,11 +198,11 @@
   <!-- scripts concatenated and minified via ant build script-->
   <%= javascript_include_tag 'mylibs/jawdropper_slider', 'mylibs/lightbox/jquery.lightbox.min', 'script', :cache => 'powerfactory' %>
   <!-- end scripts-->
-  
-  
-  
-   
-	
+
+
+
+
+
   <!-- mathiasbynens.be/notes/async-analytics-snippet Change UA-28243416-1 to be your site's ID -->
   <script>
     var _gaq=[['_setAccount','UA-28243416-1'],['_trackPageview'],['_trackPageLoadTime']];
