--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
   <meta name="geo.placename" content="Miraflores" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
- 
+
 
 
   <%= stylesheet_link_tag "960_16_col", "jawdropper_slider", "style", "application", :media => "all", :cache => "powerhouse" %>
@@ -48,37 +48,36 @@
 	document.createElement('figcaption');
 </script>
 <![endif]-->
-  
+
 </head>
 
 <body class="done3">
   <div id="container">
-  
+
     <header id="header-main">
     	<div class="container_16">
         	<header>
             	<nav id="menu-secondary">
             		<ul>
                 		<li><a href="/contacto" class="contacto"><span style="display:none">Contacto</span></a></li>
-                   	 	<li><a href="https://twitter.com/LMS_consulting" class="twitter"><span style="display:none">Twitter</span></a></li>
-                		<li><a href="http://www.facebook.com/pages/Lms-Consulting/106404472756138" class="facebook"><span style="display:none">Facebook</span></a></li>
-                    
+                		<li><a href="https://www.facebook.com/pages/Laboral-Medical-Service-EIRL/275466269186823" class="facebook"><span style="display:none">Facebook</span></a></li>
+
                 	</ul>
     			</nav>
-				
+
             </header>
-        	
+
             <section>
-            
+
             		<%= link_to (image_tag("3-images/logo.png", :size => "330x80", :alt => "LabMedical", :id => "logo")), '/homes' %>
-		
+
             	<nav id="menu-main">
             		<ul>
 					<li class="servicios ">
                 		<a href="/servicios">
 				    		<span>Servicios</span>
 				  		</a>
-						
+
 				</li>
 
                    	 	<li class="blog">
@@ -108,7 +107,7 @@
                 	</ul>
     			</nav>
             </section>
-            
+
             <footer>
             	<h1><b>Acertamos a tus exigencias.</b></h1>
             	<h2>Chequeos médicos ocupacionales, Implementación de sistemas de gestión, capacitaciones.</h2>
@@ -120,7 +119,7 @@
   <%= yield %>
 
 
-  
+
 
 
   <section id="postcript-bottom">
@@ -130,16 +129,10 @@
                 	<figcaption>
                     	Conf&iacute;an en Laboral Medical:
                     <figcaption>
-            		<img src="/images/3-images/logo-cinemark.png" />
-                    <img src="/images/3-images/logo-ripley.png" />
-                </figure>
-                
-                <figure>
-                	<figcaption>
-                    	Conf&iacute;an en LMS Consulting:
-                    <figcaption>
-            		<img src="/images/3-images/logo-poderosa.png" />
-                    <img src="/images/3-images/logo-elbrocal.png" />
+            		    <img src="/images/3-images/logo-cinemark.png" />
+                    <img src="/images/3-images/logo-thomas-greg.png" />
+            		    <img src="/images/3-images/logo-braedt.png" />
+                    <img src="/images/3-images/logo-jne.png" />
                 </figure>
             </article>
         </div>
@@ -159,14 +152,13 @@
         		<span>Ll&aacute;manos</span>
                 <p>
                 	<a><span>2495257 / 4455059</span></a>
-					<a><span>999857980</span></a>
+					<a><span>999857980 / 413*1130</span></a>
                 </p>
             </article>
             <article class="social-buttons">
         		<span>Socializemos</span>
                 <p>
-                	<a href="http://www.facebook.com/pages/Lms-Consulting/106404472756138" class="facebook"></a>
-                    <a href="https://twitter.com/LMS_consulting" class="twitter"></a>
+                	<a href="https://www.facebook.com/pages/Laboral-Medical-Service-EIRL/275466269186823" class="facebook"></a>
                     <!--<a href="" class="rss"></a>-->
                 </p>
             </article>
@@ -202,7 +194,7 @@
   <%= javascript_include_tag 'mylibs/jawdropper_slider', 'mylibs/lightbox/jquery.lightbox.min', 'script', :cache => 'powerfactory' %>
   <!-- end scripts-->
 
-	
+
   <!-- mathiasbynens.be/notes/async-analytics-snippet Change UA-28243416-1 to be your site's ID -->
   <script>
     var _gaq=[['_setAccount','UA-28243416-1'],['_trackPageview'],['_trackPageLoadTime']];
