Fixed some errors

--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -2,7 +2,7 @@
     	<section id="preface-top" class="content-slider-wrapper">
           <div id="slider-container">
     		<div id="slider" class='jdslider'>
-	
+
 			  <% @homes.each do |home| %>
 				<a href="" target="_blank">
 					<%= image_tag home.slide(:slide) %>
@@ -11,22 +11,25 @@
 					</span>
 				</a>
 			  <% end %>
-                
+
         	</div>
           </div>
     	</section>
-    
+
     	<section id="preface-bottom">
     		<div class="container_16">
         		<article class="homepage">
-                	
+
                 </article>
             </div>
 		</section>
-        
+
         <section id="postcript-top" class="front-blocks">
-          <div id="postcript-top-inner">
+
             <div id="postcript-top-inner-inner">
+
+          <div id="postcript-top-inner">
+<iframe id="vimeo" src="http://player.vimeo.com/video/55497240?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;color=6fde9f&amp;autoplay=0" width="500" height="275" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
         		<div class="container_16">
             		<article class="even outer">
 					  <div class="middle">
@@ -34,7 +37,7 @@
                         	Misión: Somos una organización especializada que brinda servicios enfocados en temas de salud
 							ocupacional, capacitaciones, selección de personal dirigida al profesional, organizaciones y público en
 							general buscando que nuestros clientes sean más productivos.
-                            
+
                         </p>
 				      </div><span class="a1"></span>
                     </article>
@@ -54,39 +57,39 @@
                     	<p class="inner">
                         	HONESTIDAD: llevamos nuestro trabajo diario en un ambiente de confianza, traducido en el respaldo,
 							seguridad y credibilidad a nuestros clientes.
-                           
+
                         </p>
 					  </div> <span class="a3"></span>
                     </article>
-					
+
                     <article class="odd outer">
 					  <div class="middle">
                     	<p class="inner">
                         	CALIDAD EN EL SERVICIO: Estamos comprometidos a ofrecer calidad en el servicio de Salud Ocupacional,
 
 							con el propósito de la prevención de riesgos y salud en la evaluación de los colaboradores confiados..
-                          
+
                         </p>
 					  </div>  <span class="a4"></span>
                     </article>
-					
+
 					<article class="even outer">
 					  <div class="middle">
                     	<p class="inner">
                         	COMPROMISO CON LA EMPRESA Y NUESTROS CLIENTES: nos sentimos identificados, demostramos
 							nuestro profesionalismo, responsabilidad y disposición de servicio y respeto del personal y los directivos.
-                          
+
                         </p>
 				 	  </div>  <span class="a3"></span>
                     </article>
-					
+
                     <article class="odd outer">
 					  <div class="middle">
                     	<p class="inner">
                         	Alcance: Asesoria y consultoria en el area de Gestión de Salud Ocupacional, planeacion, diseño,
 							implementación de Tópicos de Salud , Chequeos Médicos Ocupacionales, Pre, Rutina y de
 							retiro, despitajes masivos, y capacitaciones
-                           
+
                         </p>
 					  </div> <span class="a4"></span>
                     </article>
@@ -94,8 +97,8 @@
              </div>
           </div>
         </section>
-        
-        
+
+
     </div>
 
 
