--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -28,25 +28,24 @@
        Modernizr enables HTML5 elements & feature detects; Respond is a polyfill for min/max-width CSS3 Media Queries
        For optimal performance, use a custom Modernizr build: www.modernizr.com/download/ -->
   <%= javascript_include_tag "modernizr", "respond", :cache => "modernizer-respond" %>
-  
+
 </head>
 
 <body class="cms">
   <div id="container" style="background:none">
-  
+
     <header id="header-main">
     	<div class="container_16">
         	<header>
             	<nav id="menu-secondary">
             		<ul>
                 		<li><a href="/contacto" class="contacto"><span style="display:none">Contacto</span></a></li>
-                   	 	<li><a href="https://twitter.com/LMS_consulting" class="twitter"><span style="display:none">Twitter</span></a></li>
-                		<li><a href="http://www.facebook.com/pages/Lms-Consulting/106404472756138" class="facebook"><span style="display:none">Facebook</span></a></li>
-                    
+                		<li><a href="https://www.facebook.com/pages/Laboral-Medical-Service-EIRL/275466269186823" class="facebook"><span style="display:none">Facebook</span></a></li>
+
                 	</ul>
     			</nav>
             </header>
-        	
+
             <section>
             	<%= image_tag("3-images/logo.png", :size => "330x80", :alt => "LabMedical", :id => "logo")  %>
             	<nav id="menu-main">
@@ -83,8 +82,8 @@
                 	</ul>
     			</nav>
             </section>
-            
-           
+
+
         </div>
     </header>
 
@@ -106,8 +105,8 @@
   	</div>
 
 
-  
-   
+
+
   </div> <!--! end of #container -->
 
 
@@ -134,7 +133,7 @@
   <%= javascript_include_tag :ckeditor %>
   <!-- end scripts-->
 
-	
+
   <!-- mathiasbynens.be/notes/async-analytics-snippet Change UA-28243416-1 to be your site's ID -->
   <script>
     var _gaq=[['_setAccount','UA-28243416-1'],['_trackPageview'],['_trackPageLoadTime']];
