--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -69,7 +69,7 @@
 
             <section>
 
-            		<%= link_to (image_tag("3-images/logo.png", :size => "330x80", :alt => "LabMedical", :id => "logo")), '/homes' %>
+            		<%= link_to (image_tag("3-images/logo.png", :size => "330x80", :alt => "LabMedical", :id => "logo")), root_path %>
 
             	<nav id="menu-main">
             		<ul>
