--- a/app/views/layouts/application-alt.html.erb
+++ b/app/views/layouts/application-alt.html.erb
@@ -73,7 +73,7 @@
             <section>
                 <%= link_to(@home) do %>
 
-            	<%= link_to (image_tag("3-images/logo.png", :size => "330x80", :alt => "LabMedical", :id => "logo")), '/homes' %>
+            	<%= link_to (image_tag("3-images/logo.png", :size => "330x80", :alt => "LabMedical", :id => "logo")), root_path %>
 		<% end %>
             	<nav id="menu-main">
             		<ul>
@@ -128,17 +128,12 @@
                 	<figcaption>
                     	Conf&iacute;an en Laboral Medical:
                     <figcaption>
-            		<img src="/images/3-images/logo-cinemark.png" />
-                    <img src="/images/3-images/logo-ripley.png" />
+            		    <img src="/images/3-images/logo-cinemark.png" />
+                    <img src="/images/3-images/logo-thomas-greg.png" />
+            		    <img src="/images/3-images/logo-braedt.png" />
+                    <img src="/images/3-images/logo-jne.png" />
                 </figure>
 
-                <figure>
-                	<figcaption>
-                    	Conf&iacute;an en LMS Consulting:
-                    <figcaption>
-            		<img src="/images/3-images/logo-poderosa.png" />
-                    <img src="/images/3-images/logo-elbrocal.png" />
-                </figure>
             </article>
         </div>
     </section>
