--- a/app/views/layouts/application-cms.html.erb
+++ b/app/views/layouts/application-cms.html.erb
@@ -34,31 +34,30 @@
 	document.createElement('figcaption');
 </script>
 <![endif]-->
-  
-  
+
+
 </head>
 
 <body class="cms">
   <div id="container">
-  
+
     <header id="header-main">
     	<div class="container_16">
         	<header>
             	<nav id="menu-secondary">
             		<ul>
                 		<li><a href="/contacto" class="contacto"><span style="display:none">Contacto</span></a></li>
-                   	 	<li><a href="https://twitter.com/LMS_consulting" class="twitter"><span style="display:none">Twitter</span></a></li>
-                		<li><a href="http://www.facebook.com/pages/Lms-Consulting/106404472756138" class="facebook"><span style="display:none">Facebook</span></a></li>
-                    
+                		<li><a href="https://www.facebook.com/pages/Laboral-Medical-Service-EIRL/275466269186823" class="facebook"><span style="display:none">Facebook</span></a></li>
+
                 	</ul>
     			</nav>
-				
+
             </header>
-        	
+
             <section>
                 <%= link_to(@home) do %>
-   
-            	<%= link_to (image_tag("3-images/logo.png", :size => "330x80", :alt => "LabMedical", :id => "logo")), '/homes' %>
+
+            	<%= link_to (image_tag("3-images/logo.png", :size => "330x80", :alt => "LabMedical", :id => "logo")), root_path %>
 		<% end %>
             	<nav id="menu-main">
             		<ul>
@@ -94,8 +93,8 @@
                 	</ul>
     			</nav>
             </section>
-            
-            
+
+
         </div>
     </header>
 
@@ -103,7 +102,7 @@
   <%= yield %>
 
 
-  
+
 
 
   <section id="postcript-bottom">
@@ -113,17 +112,12 @@
                 	<figcaption>
                     	Conf&iacute;an en Laboral Medical:
                     <figcaption>
-            		<img src="images/3-images/logo-cinemark.png" />
-                    <img src="images/3-images/logo-ripley.png" />
+            		    <img src="/images/3-images/logo-cinemark.png" />
+                    <img src="/images/3-images/logo-thomas-greg.png" />
+            		    <img src="/images/3-images/logo-braedt.png" />
+                    <img src="/images/3-images/logo-jne.png" />
                 </figure>
-                
-                <figure>
-                	<figcaption>
-                    	Conf&iacute;an en LMS Consulting:
-                    <figcaption>
-            		<img src="images/3-images/logo-poderosa.png" />
-                    <img src="images/3-images/logo-elbrocal.png" />
-                </figure>
+
             </article>
         </div>
     </section>
@@ -135,7 +129,7 @@
         		<span>Trabaja con Nosotros</span>
                 <p>
                 	<a href="contact///new"><span>Envía tu solicitud</span></a>
-					
+
                 </p>
             </article>
             <article>
@@ -150,7 +144,7 @@
                 <p>
                 	<a href="http://www.yahoo.com" class="facebook"></a>
                     <a href="http://www.google.com" class="twitter"></a>
-                   
+
                 </p>
             </article>
             <article>
@@ -184,10 +178,10 @@
   <!-- scripts concatenated and minified via ant build script-->
   <%= javascript_include_tag 'script', :cache => 'powerfactory' %>
   <!-- end scripts-->
-  
-  
-  
-   
+
+
+
+
 
 </body>
 </html>
