Making the notice appear

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -4,8 +4,8 @@
      		<div class="full-side contact-header">
             <h1>Contáctanos</h1>
             <p>
-              <% if notice %>
-                <%= notice %>
+              <% if params[:notice] %>
+                <%= params[:notice] %>
               <% else %>
                 Resolveremos todas tus dudas.
               <% end %>
