--- a/app/views/layouts/application-alt.html.erb
+++ b/app/views/layouts/application-alt.html.erb
@@ -33,6 +33,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Mobile viewport optimized: j.mp/bplateviewport -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <%= favicon_link_tag 'favicon.png' %>
 
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons -->
 
