--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
   <meta name="geo.region" content="PE-LIM" />
   <meta name="geo.placename" content="Miraflores" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  <%= favicon_link_tag 'favicon.png' %>
 
 
 
