--- a/app/views/posts/_sharing.html.erb
+++ b/app/views/posts/_sharing.html.erb
@@ -1,7 +1,7 @@
 <p class="sharing">Compartir en:</p>
 <nav>
 	<ul class="social-buttons">
-		<li><a href="http://www.facebook.com/sharer.php?u=<%= request.url %>" class="facebook"></a></li>
-		<li><a href="http://twitter.com/home?status=<%= request.url %>" class="twitter"></a></li>
+		<li><%= link_to '', "http://www.facebook.com/sharer.php?u=#{request.url}", :class => 'facebook', :target => '_blank' %></li>
+		<li><%= link_to '', "http://www.twitter.com/home?status=#{ request.url }", :class => 'twitter', :target => '_blank' %></li>
 	</ul>
 </nav>
