--- a/app/views/layouts/application-alt.html.erb
+++ b/app/views/layouts/application-alt.html.erb
@@ -74,7 +74,7 @@
             <section>
                 <%= link_to(@home) do %>
 
-            	<%= link_to (image_tag("3-images/logo.png", :size => "330x80", :alt => "LabMedical", :id => "logo")), root_path %>
+            	<%= link_to (image_tag("/images/3-images/logo.png", :size => "330x80", :alt => "LabMedical", :id => "logo")), root_path %>
 		<% end %>
             	<nav id="menu-main">
             		<ul>
